[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/UI/settings.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/grobold_32.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/GameMenu/SettingsMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/GameMenu/GameMenu.gd" type="Script" id=4]

[node name="GameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 405.0
margin_top = 247.0
margin_right = 619.0
margin_bottom = 353.0

[node name="MenuBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 214.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 2 )
text = "Quit to Menu"
flat = true

[node name="LeaveBtn2" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 214.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 2 )
text = "Leave Game"
flat = true

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0
color = Color( 0.2, 0.29, 0.37, 0.75 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="TextureButton" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsMenu" parent="." instance=ExtResource( 3 )]
visible = false
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuBtn" to="." method="_on_MenuBtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/LeaveBtn2" to="." method="_on_LeaveBtn_pressed"]
[connection signal="pressed" from="ColorRect/Settings" to="." method="_on_Settings_pressed"]
